# src/api/auth.api.ts
@@ -1,4 +1,4 @@
-import { baseApi } from "./axios";
+import { baseApi, api } from "./axios";
 import { 
     LoginRequest, 
     AuthResponse ,
@@ -21,3 +21,20 @@ export const registerSeller = async (data: RegisterSellerRequest): Promise<Regis
   const response = await baseApi.post<RegisterSellerResponse>("/auth/register/seller", data);
   return response.data;
 }
+
+export const logout = async (): Promise<void> => {
+    try{
+        await baseApi.post("/auth/logout");
+    }
+    finally {
+    localStorage.removeItem("accessToken");
+    localStorage.removeItem("refreshToken");
+    localStorage.removeItem("user");
+    }
+}
+
+export const getMe = async () => {
+  const response = await api.get("/auth/me");
+
+  return response.data;
+};
